--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     loki_svc:
         image: grafana/loki:2.9.3
         ports:
-            - "3100:3100"
+            - 3100:3100
         command: -config.file=/etc/loki/local-config.yaml
         networks:
             - overlay
@@ -23,23 +23,24 @@ services:
 
     # Prometheus Container
     prometheus_svc:
-        image: 'prom/prometheus:v2.49.1'
+        image: prom/prometheus:v2.49.1
         command: '--config.file=/etc/prometheus/prometheus.yml'
         volumes:
-            - "./configs/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml"
+            - ./configs/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+            - prometheus_data:/prometheus
         ports:
-            - '9090:9090'
+            - 9090:9090
         restart: unless-stopped
 
     # Grafana Container
     grafana_svc:
-        image: 'grafana/grafana:10.2.3'
+        image: grafana/grafana:10.2.3
         environment:
             - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
             - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
             - GF_USERS_ALLOW_SIGN_UP=false
         ports:
-            - '3000:3000'
+            - 3000:3000
         volumes:
           - grafana_data:/var/lib/grafana
         depends_on:
