--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
         ports:
             - 9090:9090
         restart: unless-stopped
+        networks:
+          - overlay
 
     # Grafana Container
     grafana_svc:
