--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,6 @@
 version: '3'
 
 services:
-    # Loki Container
-    loki_svc:
-        image: grafana/loki:2.9.3
-        ports:
-            - 3100:3100
-        command: -config.file=/etc/loki/local-config.yaml
-        networks:
-            - overlay
-        restart: unless-stopped
-
-    # Promtail Container
-    promtail_svc:
-        image: grafana/promtail:2.9.3
-        volumes:
-            - './configs/:/var/log'
-        command: -config.file=/etc/promtail/config.yml
-        networks:
-            - overlay
-        restart: unless-stopped
-
     # Prometheus Container
     prometheus_svc:
         image: prom/prometheus:v2.49.1
@@ -44,7 +24,9 @@ services:
         ports:
             - 3000:3000
         volumes:
+          - ./configs/grafana/grafana.ini:/etc/grafana/grafana.ini
           - grafana_data:/var/lib/grafana
+          - grafana_logs:/var/log/grafana
         depends_on:
             - prometheus
         restart: unless-stopped
@@ -60,4 +42,7 @@ volumes:
     driver: local
 
   grafana_data:
+    driver: local
+
+  grafana_logs:
     driver: local
