--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
           - grafana_data:/var/lib/grafana
           - grafana_logs:/var/log/grafana
         depends_on:
-            - prometheus
+            - prometheus_svc
         restart: unless-stopped
         networks:
           - overlay
