--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,7 @@ services:
           - --config.file=/etc/prometheus/prometheus.yml
           - --web.enable-remote-write-receiver
           - --enable-feature=exemplar-storage
+          - --storage.tsdb.path=/prometheus
         volumes:
             - ./configs/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
             - prometheus_data:/prometheus
@@ -41,6 +42,7 @@ services:
             - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
             - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
             - GF_USERS_ALLOW_SIGN_UP=false
+            - GF_FEATURE_TOGGLES_ENABLE=publicDashboards
         ports:
             - 3000:3000
         volumes:
