--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,7 +3,7 @@ name: Lint
 on:
   - push
 jobs:
-  lintAllTheThings:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
