--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,7 +1,8 @@
----
 name: Lint
+
 on:
   - push
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -9,3 +10,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v3
+        with:
+          file_or_dir: *.yaml
+          config_file: .yamllint.yml
