--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '3'
+version: 3
 
 services:
     # Tempo Container
@@ -9,12 +9,12 @@ services:
             - ./configs/tempo/tempo.yaml:/etc/tempo.yaml
             - tempo_data:/tmp/tempo
         ports:
-            - "14268:14268"   # jaeger ingest
-            - "3200:3200"     # tempo
-            - "9095:9095"     # tempo grpc
-            - "4317:4317"     # otlp grpc
-            - "4318:4318"     # otlp http
-            - "9411:9411"     # zipkin
+            - 14268:14268    # jaeger ingest
+            - 3200:3200      # tempo
+            - 9095:9095      # tempo grpc
+            - 4317:4317      # otlp grpc
+            - 4318:4318      # otlp http
+            - 9411:9411      # zipkin
 
     # Prometheus Container
     prometheus_svc:
@@ -39,28 +39,28 @@ services:
             - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
             - GF_USERS_ALLOW_SIGN_UP=false
             - GF_FEATURE_TOGGLES_ENABLE=publicDashboards
-        ports:
-            - 3000:3000
         volumes:
           - ./configs/grafana/grafana.ini:/etc/grafana/grafana.ini
           - grafana_data:/var/lib/grafana
           - grafana_logs:/var/log/grafana
+        ports:
+            - 3000:3000
         restart: unless-stopped
 
     # Loki Container
     loki_svc:
         image: grafana/loki:2.9.3
+        command: -config.file=/etc/loki/local-config.yaml
         ports:
             - 3100:3100
-        command: -config.file=/etc/loki/local-config.yaml
         restart: unless-stopped
 
     # Promtail Container
     promtail_svc:
         image: grafana/promtail:2.9.3
-        volumes:
-            - './var/logs/:/var/log'
         command: -config.file=/etc/promtail/config.yml
+        volumes:
+            - ./var/logs/:/var/log
         restart: unless-stopped
 
 volumes:
