--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,6 +63,13 @@ services:
             - ./var/logs/:/var/log
         restart: unless-stopped
 
+    # Pyroscope Container
+    pyroscope_svc:
+        image: grafana/pyroscope:1.3.0
+        ports:
+            - 4040:4040
+        restart: unless-stopped
+
 volumes:
   prometheus_data:
     driver: local
