--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -13,3 +13,9 @@ scrape_configs:
   - job_name: 'tempo'
     static_configs:
       - targets: [ 'tempo_svc:3200' ]
+
+# Change to different values
+remote_write:
+  basic_auth:
+    username: admin
+    password: password
