--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -10,12 +10,15 @@ scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: [ 'localhost:9090' ]
+  - job_name: 'node_exporter'
+    static_configs:
+      - targets: [ 'localhost:9200' ]
   - job_name: 'tempo'
     static_configs:
       - targets: [ 'tempo_svc:3200' ]
 
 # Change to different values
-remote_write:
-  basic_auth:
-    username: admin
-    password: password
+# remote_write:
+#  basic_auth:
+#    username: admin
+#    password: password
