--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -14,8 +14,8 @@ scrape_configs:
     static_configs:
       - targets: [ 'tempo_svc:3200' ]
 
-# Change to different values
-# remote_write:
-#  basic_auth:
-#    username: admin
-#    password: password
+# change to different values
+remote_write:
+  basic_auth:
+    username: admin
+    password: password
