--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -1,18 +1,19 @@
 # my global config
 global:
-  scrape_interval:     15s
+  scrape_interval: 15s
   external_labels:
     monitor: cougar-monitor
   evaluation_interval: 15s
-
-rule_files: ~
+rule_files: null
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: prometheus
     static_configs:
-      - targets: [ 'localhost:9090' ]
-  - job_name: 'tempo'
+      - targets:
+          - 'localhost:9090'
+  - job_name: tempo
     static_configs:
-      - targets: [ 'tempo_svc:3200' ]
+      - targets:
+          - 'tempo_svc:3200'
 
 # change to different values
 remote_write:
