--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -56,12 +56,12 @@ services:
         restart: unless-stopped
 
     # Promtail Container
-    promtail_svc:
-        image: grafana/promtail:2.9.7
-        command: -config.file=/etc/promtail/config.yml
-        volumes:
-            - ./var/logs/:/var/log
-        restart: unless-stopped
+    # promtail_svc:
+    #     image: grafana/promtail:2.9.7
+    #     command: -config.file=/etc/promtail/config.yml
+    #     volumes:
+    #         - ./var/logs/:/var/log
+    #     restart: unless-stopped
 
     # Pyroscope Container
     pyroscope_svc:
