--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -65,7 +65,7 @@ services:
     # Alertmanager Container
     alertmanager_svc:
         image: prom/alertmanager:v0.27.0
-        command: --config.file=./configs/alertmanager/alertmanager.yml --log.level=debug
+        command: --config.file=/config/alertmanager.yml --log.level=debug
         ports:
           - 9093:9093
         volumes:
