--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -10,14 +10,10 @@ scrape_configs:
     static_configs:
       - targets:
           - 'localhost:9090'
-  - job_name: tempo
-    static_configs:
-      - targets:
-          - 'tempo:3200'
 
 # change to different values
 remote_write:
-  - url: "https://localhost:9090/api/v1/write"
+  - url: "http://localhost:9090/api/v1/write"
     basic_auth:
       username: "admin"
       password: "password"
