--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
             - ./configs/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
             - prometheus_data:/prometheus
         ports:
-            - 9090:9090
+            - 9090
         restart: unless-stopped
 
     # Grafana Container
@@ -44,7 +44,7 @@ services:
           - grafana_data:/var/lib/grafana
           - grafana_logs:/var/log/grafana
         ports:
-            - 3000:3000
+            - 3000
         restart: unless-stopped
 
     # Loki Container
@@ -53,14 +53,14 @@ services:
         command:
             - -config.file=/etc/loki/local-config.yaml
         ports:
-            - 3100:3100
+            - 3100
         restart: unless-stopped
 
     # Pyroscope Container
     pyroscope_svc:
         image: grafana/pyroscope:1.5.0
         ports:
-            - 4040:4040
+            - 4040
         restart: unless-stopped
 
     # Alertmanager Container
@@ -70,10 +70,19 @@ services:
             - --config.file=/etc/alertmanager/alertmanager.yml
             - --log.level=debug
         ports:
-            - 9093:9093
+            - 9093
         volumes:
             - ./configs/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml"
             - alertmanager_data:/data
+        restart: unless-stopped
+
+    # Nginx Container
+    nginx:
+        image: nginx:1.25.4-alpine3.18
+        ports:
+            - 80:80
+        volumes:
+            - ./configs/nginx/nginx.conf:/etc/nginx/nginx.conf
         restart: unless-stopped
 
 volumes:
