--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,7 +77,7 @@ services:
         restart: unless-stopped
 
     # Nginx Container
-    nginx:
+    nginx_svc:
         image: nginx:1.25.4-alpine3.18
         ports:
             - 80:80
