--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -6,7 +6,7 @@ http {
         server_name localhost; # Replace with your actual domain name
 
         location /prometheus {
-            proxy_pass http://prometheus_svc:9090;
+            proxy_pass http://prometheus:9090;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -17,7 +17,7 @@ http {
         }
 
         location /grafana {
-            proxy_pass http://grafana_svc:3000;
+            proxy_pass http://grafana:3000;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -28,7 +28,7 @@ http {
         }
 
         location /loki {
-            proxy_pass http://loki_svc:3100;
+            proxy_pass http://loki:3100;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -39,7 +39,7 @@ http {
         }
 
         location /pyroscope {
-            proxy_pass http://pyroscope_svc:4040;
+            proxy_pass http://pyroscope:4040;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -50,7 +50,7 @@ http {
         }
 
         location /alertmanager {
-            proxy_pass http://alertmanager_svc:9093;
+            proxy_pass http://alertmanager:9093;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
