--- a/configs/prometheus/prometheus.yml
+++ b/configs/prometheus/prometheus.yml
@@ -13,7 +13,7 @@ scrape_configs:
   - job_name: tempo
     static_configs:
       - targets:
-          - 'tempo_svc:3200'
+          - 'tempo:3200'
 
 # change to different values
 remote_write:
