--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
     # Tempo Container
-    tempo_svc:
+    tempo:
         image: grafana/tempo:2.4.1
         command: [ "-config.file=/etc/tempo.yaml" ]
         volumes:
@@ -17,7 +17,7 @@ services:
             - 9411:9411      # zipkin
 
     # Prometheus Container
-    prometheus_svc:
+    prometheus:
         image: prom/prometheus:v2.51.2
         command:
             - --config.file=/etc/prometheus/prometheus.yml
@@ -32,7 +32,7 @@ services:
         restart: unless-stopped
 
     # Grafana Container
-    grafana_svc:
+    grafana:
         image: grafana/grafana:10.4.2
         environment:
             - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
@@ -48,7 +48,7 @@ services:
         restart: unless-stopped
 
     # Loki Container
-    loki_svc:
+    loki:
         image: grafana/loki:3.0.0
         command:
             - -config.file=/etc/loki/local-config.yaml
@@ -57,14 +57,14 @@ services:
         restart: unless-stopped
 
     # Pyroscope Container
-    pyroscope_svc:
+    pyroscope:
         image: grafana/pyroscope:1.5.0
         ports:
             - 4040
         restart: unless-stopped
 
     # Alertmanager Container
-    alertmanager_svc:
+    alertmanager:
         image: prom/alertmanager:v0.27.0
         command:
             - --config.file=/etc/alertmanager/alertmanager.yml
@@ -77,7 +77,7 @@ services:
         restart: unless-stopped
 
     # Nginx Container
-    nginx_svc:
+    nginx:
         image: nginx:1.25.4-alpine3.18
         ports:
             - 80:80
