--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -5,8 +5,8 @@ http {
         listen 80;
         server_name localhost; # Replace with your actual domain name
 
-        location /prometheus {
-            proxy_pass http://prometheus:9090;
+        location / {
+            proxy_pass http://grafana:3000;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
@@ -16,8 +16,8 @@ http {
             proxy_redirect off;
         }
 
-        location /grafana {
-            proxy_pass http://grafana:3000;
+        location /prometheus {
+            proxy_pass http://prometheus:9090;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
