--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,19 +2,19 @@ version: '3.8'
 
 services:
     # Tempo Container
-    tempo:
-        image: grafana/tempo:2.4.1
-        command: [ "-config.file=/etc/tempo.yaml" ]
-        volumes:
-            - ./configs/tempo/tempo.yaml:/etc/tempo.yaml
-            - tempo_data:/tmp/tempo
-        ports:
-            - 14268:14268    # jaeger ingest
-            - 3200:3200      # tempo
-            - 9095:9095      # tempo grpc
-            - 4317:4317      # otlp grpc
-            - 4318:4318      # otlp http
-            - 9411:9411      # zipkin
+    # tempo:
+    #     image: grafana/tempo:2.4.1
+    #     command: [ "-config.file=/etc/tempo.yaml" ]
+    #     volumes:
+    #         - ./configs/tempo/tempo.yaml:/etc/tempo.yaml
+    #         - tempo_data:/tmp/tempo
+    #     ports:
+    #         - 14268:14268    # jaeger ingest
+    #         - 3200:3200      # tempo
+    #         - 9095:9095      # tempo grpc
+    #         - 4317:4317      # otlp grpc
+    #         - 4318:4318      # otlp http
+    #         - 9411:9411      # zipkin
 
     # Prometheus Container
     prometheus:
@@ -95,8 +95,8 @@ volumes:
   grafana_logs:
     driver: local
 
-  tempo_data:
-    driver: local
+#  tempo_data:
+#    driver: local
 
   alertmanager_data:
     driver: local
