--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -16,6 +16,14 @@ http {
             proxy_redirect off;
         }
 
+        location /grafana/api/live/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_pass http://grafana:3000;
+        }
+
         location /prometheus {
             proxy_pass http://prometheus:9090;
             proxy_set_header X-Real-IP $remote_addr;
