--- a/configs/nginx/nginx.conf
+++ b/configs/nginx/nginx.conf
@@ -1,6 +1,11 @@
 events { }
 
 http {
+    map $http_upgrade $connection_upgrade {
+      default upgrade;
+      '' close;
+    }
+
     server {
         listen 80;
         server_name localhost; # Replace with your actual domain name
